<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rynel.emi_calculator.MainActivity"
    android:weightSum="1">


    <TextView
        android:id="@+id/tvUpdatedValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_emi"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/loan_amount" />

        <EditText
            android:id="@+id/etLoanAmount"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/rate_of_interest" />

        <EditText
            android:id="@+id/etRateOfInterest"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/amount_of_years"/>

        <EditText
            android:id="@+id/etAmountOfYears"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calcEMI"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/tvResult"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
